syntax = "proto3";
option go_package = "bapi/internal/pb";

package bapi;

enum Status {
  UNKNOWN = 0;
  OK = 200;
  ACCEPTED = 202;
  NO_CONTENT = 204;
  BAD_REQUEST = 400;
  SERVER_ERROR = 500;
}

enum AggOp {
  COUNT = 0;
  COUNT_DISTINCT = 1;
  SUM = 2;
  AVG  = 3;
}

enum TimeGran {
  INVALID = 0;
  MIN_5 = 300;
  MIN_15 = 900;
  MIN_30 = 1800;
  HOUR_1 = 3600;
}

enum FilterOp {
  EQ = 0;
  NE = 1;
  LT = 2;
  GT = 3;
  LE =4;
  GE = 5;
  NONNULL = 6;
  NULL = 7;
}

message Filter {
  string column_name = 1;
  FilterOp filter_op = 2;
  oneof value {
    int64 int_val = 3;
    string str_val = 4;
  }
}

message RawRow {
  map<string, int64>  int = 1;
  map<string, string>  str = 2;
}

message RowsQuery {
  int64 min_ts = 1;
  optional int64 max_ts = 2;
  repeated Filter int_filters = 3;
  repeated Filter str_filters = 4;
  repeated string int_column_names = 5;
  repeated string str_column_names = 6;
}

message TableQuery {
  int64 min_ts = 1;
  optional int64 max_ts = 2;
  repeated Filter int_filters = 3;
  repeated Filter str_filters = 4;
  repeated string groupby_int_column_names = 5;
  repeated string groupby_str_column_names = 6;
  AggOp agg_op = 7;
  repeated string agg_int_column_names = 8;
}

message TimelineQuery {
  int64 min_ts = 1;
  optional int64 max_ts = 2;
  repeated Filter int_filters = 3;
  repeated Filter str_filters = 4;
  repeated string groupby_int_column_names = 5;
  repeated string groupby_str_column_names = 6;
  AggOp agg_op = 7;
  repeated string agg_int_column_names = 8;
}

message RowsQueryResult {
  int32 count = 1;

  repeated string int_column_names = 2;
  repeated int64 int_result = 3;
  repeated bool int_has_value = 4;

  repeated string str_column_names = 5;
  map<uint32, string> str_id_map = 6;
  repeated uint32 str_result = 7;
  repeated bool str_has_value = 8;
}

message TableQueryResult {
  int32 count = 1;

  repeated string int_column_names = 2;
  repeated int64 int_result = 3;
  repeated bool int_has_value = 4;

  repeated string str_column_names = 5;
  map<uint32, string> str_id_map = 6;
  repeated uint32 str_result = 7;
  repeated bool str_has_value = 8;

  repeated string agg_int_column_names = 9;
  repeated int64 agg_int_result = 10;
  repeated bool agg_int_has_value = 11;

  repeated string agg_float_column_names = 12;
  repeated double agg_float_result = 13;
  repeated bool agg_float_has_value = 14;
}

service Bapi {
  rpc Ping(PingRequest) returns (PingReply) {}
  rpc IngestRawRows(IngestRawRowsRequset) returns (IngestRawRowsReply) {}
  rpc RunRowsQuery(RowsQuery) returns (RowsQueryReply) {}
  rpc RunTableQuery(TableQuery) returns (TableQueryReply) {}
  rpc InitiateShutdown(InitiateShutdownRequest) returns (InitiateShutdownReply) {}
}

message IngestRawRowsRequset { 
  repeated RawRow rows = 1;
  bool use_server_ts= 2;
}

message IngestRawRowsReply { 
  Status status = 1;
  optional string message = 2; 
}

message RowsQueryReply { 
  Status status = 1; 
  optional string message = 2; 
  optional RowsQueryResult result = 3; 
}

message TableQueryReply { 
  Status status = 1; 
  optional string message = 2; 
  optional TableQueryResult result = 3; 
}

message PingRequest { string name = 1; }
message PingReply { 
  Status status = 1;
  optional string message = 2; 
 }

message InitiateShutdownRequest { string reason = 1; }
message InitiateShutdownReply {
  Status status = 1;
  optional string message = 2; 
}